# ttyui

./: Cargo.toml  Makefile  README.md  Tea
.github/workflows/: cov.yaml  release.yaml
src/: lib.rs  readline.rs  selector.rs
