[package]
name = "ttyui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities", "development-tools::commandline-libraries"]
repository = "https://github.com/g1eng/ttyui"
documentation = "https://doc.rs/ttyui"

[dependencies]
chrono = "0.4.26"
console = "0.15.7"
