[package]
name = "ttyui"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tiny set of helpers for terminal interactivity, including readline, word selector and date selector."
homepage = "https://github.com/g1eng/ttyui"
repository = "https://github.com/g1eng/ttyui"
readme = "README.md"
documentation = "https://docs.rs/ttyui"
keywords = ["cli"]
categories = ["command-line-utilities", "development-tools::commandline-libraries"]

[dependencies]
chrono = "0.4.26"
console = "0.15.7"
